[gd_scene load_steps=5 format=3 uid="uid://q8vhfp012n32"]

[ext_resource type="Script" path="res://scenes/finish_screen/finish_screen.gd" id="1_phuaw"]

[sub_resource type="LabelSettings" id="LabelSettings_fdjuw"]
font_size = 121

[sub_resource type="LabelSettings" id="LabelSettings_jkw44"]
font_size = 46

[sub_resource type="LabelSettings" id="LabelSettings_nblmo"]
font_size = 46

[node name="FinishScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_phuaw")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.427451, 0.427451, 0.427451, 0.917647)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 80

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
text = "Finished"
label_settings = SubResource("LabelSettings_fdjuw")

[node name="GridContainer" type="GridContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 4

[node name="label_level_score" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Level score:"
label_settings = SubResource("LabelSettings_jkw44")

[node name="label_total_score" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "Total score:"
label_settings = SubResource("LabelSettings_nblmo")

[node name="label_high_score" type="Label" parent="MarginContainer/GridContainer"]
layout_mode = 2
text = "High score:"
label_settings = SubResource("LabelSettings_nblmo")

[node name="button_next_level" type="Button" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
theme_override_font_sizes/font_size = 46
text = "Next level"

[connection signal="pressed" from="MarginContainer/button_next_level" to="." method="_on_button_next_level_pressed"]
